app/ui/global.scss
body {
    margin: 0;
    padding: 0;
    color: white;
    font-family: Tahoma, Geneva, Verdana, sans-serif;
    font-size: small;
}

.container {
    display: flex;
    min-height: 100vh;
}

.sidebar {
    width: 320px;
    padding: 1rem;
    background-color: #121214;
    position: sticky;
    top: 0;
    height: 100vh;
    overflow-y: auto;
    display: flex;
    flex-direction: column;
    gap: 1rem;
    border-right: 1px solid #6d6e771f;
}

.introduction {
    padding-top: 1rem;
    border-top: 1px solid #6d6e771f;
}

.introduction p {
    margin: 0;
}

.sidebar label {
    color: #82838b;
    margin-bottom: -0.5rem;
}

.sidebar input,
.sidebar select {
    padding: 0.5rem;
    border: 1px solid #97979f33;
    border-radius: 8px;
    background-color: #00000014;
    color: white;
    outline: none;
    transition: border 0.3s ease;

    &:focus {
        border: 1px solid #5197ed;
    }
}

.sidebar input {
    width: 94%;
}

.sidebar select {
    width: 100%;
}

.sidebar select option {
    background-color: #121214;
}

.multiSelect {
    display: flex;
    flex-direction: column;
    gap: 0.25rem;
}

#barra-superior {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin: 0.2rem 1rem;
}

#barra-superior .bs-1 {
    background-color: #524d25;
    padding: 0.1rem 0.2rem;
    border-radius: 3px;
}

#barra-superior .bs-2 {
    padding: 0.1rem 0.2rem;
    border-radius: 0.5rem;
    background-color: #202024;
    color: #f57976;
}

.results {
    flex: 1;
    overflow-x: auto;
    background-color: #1a1a1e;
}

.table-container {
    max-height: 100vh;
    overflow-y: auto;
    border-top: 1px solid #6d6e771f;
    border-bottom: 1px solid #6d6e771f;
}

table {
    width: 100%;
    border-collapse: collapse;
}

thead {
    position: sticky;
    top: 0;
    background-color: #121214;
    z-index: 2;
    border-bottom: 1px solid #6d6e771f;
}

th, td {
    padding: 0.65rem;
    text-align: left;
}

td {
    border-bottom: 1px solid #6d6e771f;
}

td a {
    background-color: #292c51;
    transition: background-color 50ms ease-out,color 50ms ease-out;
    padding: 0.2rem;
    border-radius: 3px;
    color: #a9baff;
    text-decoration: none;

    &:hover {
        background-color: #5865f2;
        color: #fff;
    }
}

tbody tr {
    transition: background-color 0.2s ease;

    &:hover {
        background: #242428;
    }
}

.tag-container {
    display: flex;
    flex-wrap: wrap;
    gap: 0.5rem;
}

.tag {
    color: #efeff0;
    border: 1px solid #97979f33;
    background-color: #121214;
    border-radius: 8px;
    padding: 0.4rem;
    cursor: pointer;
    transition: background-color 0.2s ease;
}

.tag:hover {
    background-color: #1d1d1e;
}

.tag.selected {
    background-color: #2c2c30;
    color: white;
}

.libro-editado {
    background-color: #524d25;
    transition: background-color 0.2s ease;

    &:hover {
        background-color: #857c3a;
    }
}

.information {
    color: #007bff;
    cursor: help;
}

#clear-filters-button {
    padding: 0.5rem 1rem;
    border-radius: 0.5rem;
    background-color: #202024;
    color: #fff;
    border: none;
    cursor: pointer;
    font-weight: bold;
    transition: background-color 0.3s ease;

    &:hover {
      background-color: #35292d;
    }
}

#numero-resultados {
    font-weight: bold;
}

.report-button {
    padding: 0.5rem 0.75rem;
    border-radius: 0.5rem;
    background-color: #202024;
    border: none;
    color: #f57976;
    cursor: pointer;
    transition: background-color 0.3s ease;

    &:hover {
        background-color: #35292d;
    }
}

